tests/invalid/bytearray_extend_wrong_count/main.py
ba: bytearray = bytearray(b"hi")
ba.extend(b"a", b"b")
